--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1159,10 +1159,59 @@ section.lazy-placeholder:after {
 .cid-rQhwzvNdqP DIV {
   color: #404040;
 }
-.cid-rQi3qlm4zd {
+.cid-rV0oBivDqC {
+  padding-top: 0px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rV0oBivDqC .counter-container {
+  color: #767676;
+}
+.cid-rV0oBivDqC .counter-container ul {
+  margin-bottom: 0;
+}
+.cid-rV0oBivDqC .counter-container ul li {
+  margin-bottom: 1rem;
+  list-style: none;
+}
+.cid-rV0oBivDqC .counter-container ul li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  padding-top: 3px;
+  content: '';
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 20px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #8981d3;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  content: '✓';
+}
+.cid-rV0D3ajFwL {
   padding-top: 0px;
   padding-bottom: 45px;
   background-color: #ffffff;
+}
+.cid-rV0D3ajFwL .title {
+  margin-bottom: 2rem;
+}
+.cid-rV0D3ajFwL .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rV0D3ajFwL a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-rV0D3ajFwL a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+.cid-rV0D3ajFwL textarea.form-control {
+  min-height: 188px;
 }
 .cid-rQhvH5k8eU {
   background: #ffffff;
