--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -730,6 +730,31 @@ section.lazy-placeholder:after {
 .cid-rQmQMGRh2Z .card-wrapper {
   height: 100%;
 }
+.cid-rV1jvPfHIk {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rV1jvPfHIk h3 {
+  text-align: center;
+}
+.cid-rV1jvPfHIk .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-rV1jvPfHIk .mbr-content-text {
+  color: #767676;
+}
+.cid-rV1jvPfHIk .panel-item {
+  background: #ffffff;
+}
+.cid-rV1jvPfHIk .card {
+  word-wrap: break-word;
+}
+.cid-rV1jvPfHIk .mbr-iconfont {
+  font-size: 80px;
+  color: #149dcc;
+}
 .cid-rQebA6QEnf .navbar {
   padding: .5rem 0;
   background: #404040;
