--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1147,17 +1147,189 @@ section.lazy-placeholder:after {
 .cid-rQebA9BE8m .mbr-text {
   color: #767676;
 }
-.cid-rQhwzvNdqP {
+.cid-svpejSO4BB {
   padding-top: 30px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-rQhwzvNdqP .mbr-text,
-.cid-rQhwzvNdqP blockquote {
-  color: #767676;
+.cid-svpejSO4BB .item {
+  padding-bottom: 2rem;
 }
-.cid-rQhwzvNdqP DIV {
-  color: #404040;
+.cid-svpejSO4BB .carousel-control,
+.cid-svpejSO4BB .close {
+  background: #1b1b1b;
+}
+.cid-svpejSO4BB .carousel-control-prev {
+  margin-left: 2.5rem;
+}
+.cid-svpejSO4BB .carousel-control-next {
+  margin-right: 2.5rem;
+}
+.cid-svpejSO4BB .close {
+  position: fixed;
+  opacity: .5;
+  font-size: 35px;
+  font-weight: 300;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  line-height: 70px;
+  border: none;
+  text-align: center;
+  text-shadow: none;
+  z-index: 5;
+  -webkit-transition: opacity .3s ease;
+  -moz-transition: opacity .3s ease;
+  -o-transition: opacity .3s ease;
+  transition: opacity .3s ease;
+  font-family: 'MobiriseIcons';
+}
+.cid-svpejSO4BB .close::before {
+  content: '\e91a';
+}
+.cid-svpejSO4BB .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-svpejSO4BB .carousel-control {
+  position: fixed;
+  width: 70px;
+  height: 70px;
+  top: 50%;
+  margin-top: -35px;
+  line-height: 70px;
+  border-radius: 50%;
+  font-size: 35px;
+  border: 0;
+  opacity: .5;
+  text-shadow: none;
+  z-index: 5;
+  color: #fff;
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  -o-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
+}
+.cid-svpejSO4BB .carousel-inner > .active {
+  display: block;
+}
+.cid-svpejSO4BB .carousel-control.left {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-svpejSO4BB .carousel-control.right {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-svpejSO4BB .carousel-control .icon-next,
+.cid-svpejSO4BB .carousel-control .icon-prev {
+  margin-top: -18px;
+  font-size: 40px;
+  line-height: 27px;
+}
+.cid-svpejSO4BB .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 768px) {
+  .cid-svpejSO4BB .carousel-control,
+  .cid-svpejSO4BB .carousel-indicators,
+  .cid-svpejSO4BB .modal .close {
+    position: fixed;
+  }
+}
+@media (max-width: 767px) {
+  .cid-svpejSO4BB .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 20px;
+  }
+  .cid-svpejSO4BB .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-svpejSO4BB .carousel-indicators {
+  bottom: 0;
+  margin-bottom: 3px;
+}
+@media (max-width: 991px) {
+  .cid-svpejSO4BB .carousel-indicators {
+    margin-bottom: 3.625rem !important;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-svpejSO4BB .carousel-indicators {
+    display: none;
+  }
+}
+.cid-svpejSO4BB .carousel-indicators .active,
+.cid-svpejSO4BB .carousel-indicators li {
+  width: 7px;
+  height: 7px;
+  margin: 3px;
+  background: #1b1b1b;
+  opacity: .5;
+  border: 4px solid #1b1b1b;
+}
+.cid-svpejSO4BB .carousel-indicators .active {
+  background: #fff;
+}
+.cid-svpejSO4BB .carousel-indicators li {
+  max-width: 15px;
+  max-height: 15px;
+  border-radius: 50%;
+}
+.cid-svpejSO4BB .modal {
+  padding-left: 0 !important;
+  position: fixed;
+  overflow: hidden;
+  padding-right: 0 !important;
+}
+.cid-svpejSO4BB .modal-dialog {
+  margin: 0 auto;
+  max-width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-svpejSO4BB .modal-content {
+  border-radius: 0;
+  border: none;
+  background: transparent;
+}
+.cid-svpejSO4BB .modal-body {
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+.cid-svpejSO4BB .modal-body img {
+  width: 100%;
+  object-fit: contain;
+  max-height: calc(98.25vh);
+  height: fit-content;
+}
+.cid-svpejSO4BB .carousel {
+  width: 100%;
+}
+.cid-svpejSO4BB .modal-backdrop.in {
+  opacity: .8;
+}
+.cid-svpejSO4BB .modal.fade .modal-dialog {
+  -webkit-transition: margin-top 0.3s ease-out;
+  -moz-transition: margin-top 0.3s ease-out;
+  -o-transition: margin-top 0.3s ease-out;
+  transition: margin-top 0.3s ease-out;
+}
+.cid-svpejSO4BB .modal.fade .modal-dialog,
+.cid-svpejSO4BB .modal.in .modal-dialog {
+  -webkit-transform: none;
+  -ms-transform: none;
+  -o-transform: none;
+  transform: none;
 }
 .cid-rV0oBivDqC {
   padding-top: 15px;
@@ -1192,82 +1364,19 @@ section.lazy-placeholder:after {
   border-radius: 50%;
   content: '✓';
 }
-.cid-rV0D3ajFwL {
+.cid-svpev6KB5H {
   padding-top: 0px;
-  padding-bottom: 45px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-rV0D3ajFwL .title {
-  margin-bottom: 2rem;
-}
-.cid-rV0D3ajFwL .mbr-section-subtitle {
+.cid-svpev6KB5H .mbr-text,
+.cid-svpev6KB5H blockquote {
   color: #767676;
 }
-.cid-rV0D3ajFwL a:not([href]):not([tabindex]) {
-  color: #fff;
-  border-radius: 3px;
-}
-.cid-rV0D3ajFwL a.btn-white:not([href]):not([tabindex]) {
-  color: #333;
-}
-.cid-rV0D3ajFwL textarea.form-control {
-  min-height: 188px;
-}
-.cid-rWTZMGBOgk {
-  background: #ffffff;
-  padding-top: 0px;
-  padding-bottom: 30px;
-}
-.cid-rWTZMGBOgk .image-block {
-  margin: auto;
-}
-.cid-rWTZMGBOgk figcaption {
-  position: relative;
-}
-.cid-rWTZMGBOgk figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-rWTZMGBOgk .image-block {
-    width: 100% !important;
-  }
-}
-.cid-rQhvH5k8eU {
-  background: #ffffff;
-  padding-top: 0px;
-  padding-bottom: 45px;
-}
-.cid-rQhvH5k8eU .image-block {
-  margin: auto;
-}
-.cid-rQhvH5k8eU figcaption {
-  position: relative;
-}
-.cid-rQhvH5k8eU figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-rQhvH5k8eU .image-block {
-    width: 100% !important;
-  }
-}
-.cid-rWU3YrhEMX {
-  padding-top: 0px;
-  padding-bottom: 15px;
-  background-color: #ffffff;
-}
-.cid-rWU3YrhEMX .mbr-text,
-.cid-rWU3YrhEMX blockquote {
-  color: #767676;
-}
-.cid-rWU3YrhEMX .mbr-text P {
+.cid-svpev6KB5H .mbr-text P {
   text-align: left;
 }
-.cid-rWU3YrhEMX .mbr-text {
+.cid-svpev6KB5H .mbr-text {
   color: #767676;
 }
 .cid-rQebAdBGIQ {
