--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1228,25 +1228,209 @@ section.lazy-placeholder:after {
 .cid-svphMUOvAT blockquote {
   color: #767676;
 }
-.cid-svppXGJpOh {
+.cid-tbthq2PcGF {
   padding-top: 0px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-svppXGJpOh h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-}
-.cid-svppXGJpOh p {
+.cid-tbthq2PcGF .mbr-text,
+.cid-tbthq2PcGF blockquote {
   color: #767676;
+}
+.cid-tbthq2PcGF .mbr-text P {
   text-align: left;
 }
-.cid-svppXGJpOh .card-box {
-  padding-top: 2rem;
+.cid-tbthq2PcGF .mbr-text {
+  color: #767676;
 }
-.cid-svppXGJpOh .card-wrapper {
-  height: 100%;
+.cid-tbtoykwHYF {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-tbtoykwHYF .image-block {
+  margin: auto;
+}
+.cid-tbtoykwHYF figcaption {
+  position: relative;
+}
+.cid-tbtoykwHYF figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-tbtoykwHYF .image-block {
+    width: 100% !important;
+  }
+}
+.cid-tbttqmP7FZ {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-tbttqmP7FZ .mbr-text,
+.cid-tbttqmP7FZ blockquote {
+  color: #767676;
+}
+.cid-tbttqmP7FZ .mbr-text P {
+  text-align: left;
+}
+.cid-tbttqmP7FZ .mbr-text {
+  color: #767676;
+}
+.cid-tbtgYuujvZ {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-tbtgYuujvZ .mbr-text,
+.cid-tbtgYuujvZ blockquote {
+  color: #767676;
+}
+.cid-tbtgYuujvZ .mbr-text P {
+  text-align: left;
+}
+.cid-tbtgYuujvZ .mbr-text {
+  color: #767676;
+}
+.cid-tbtrk1iVcY {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-tbtrk1iVcY .image-block {
+  margin: auto;
+}
+.cid-tbtrk1iVcY figcaption {
+  position: relative;
+}
+.cid-tbtrk1iVcY figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-tbtrk1iVcY .image-block {
+    width: 100% !important;
+  }
+}
+.cid-tbttFKuqpG {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-tbttFKuqpG .mbr-text,
+.cid-tbttFKuqpG blockquote {
+  color: #767676;
+}
+.cid-tbttFKuqpG .mbr-text P {
+  text-align: left;
+}
+.cid-tbttFKuqpG .mbr-text {
+  color: #767676;
+}
+.cid-tbtrq8MC13 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-tbtrq8MC13 .mbr-text,
+.cid-tbtrq8MC13 blockquote {
+  color: #767676;
+}
+.cid-tbtrq8MC13 .mbr-text P {
+  text-align: left;
+}
+.cid-tbtrq8MC13 .mbr-text {
+  color: #767676;
+}
+.cid-tbtrI1vMac {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 30px;
+}
+.cid-tbtrI1vMac .image-block {
+  margin: auto;
+}
+.cid-tbtrI1vMac figcaption {
+  position: relative;
+}
+.cid-tbtrI1vMac figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-tbtrI1vMac .image-block {
+    width: 100% !important;
+  }
+}
+.cid-tbttOJesQ4 {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-tbttOJesQ4 .mbr-text,
+.cid-tbttOJesQ4 blockquote {
+  color: #767676;
+}
+.cid-tbttOJesQ4 .mbr-text P {
+  text-align: left;
+}
+.cid-tbttOJesQ4 .mbr-text {
+  color: #767676;
+}
+.cid-tbts5ydZKy {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-tbts5ydZKy .mbr-text,
+.cid-tbts5ydZKy blockquote {
+  color: #767676;
+}
+.cid-tbts5ydZKy .mbr-text P {
+  text-align: left;
+}
+.cid-tbts5ydZKy .mbr-text {
+  color: #767676;
+}
+.cid-tbts6670h6 {
+  background: #ffffff;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-tbts6670h6 .image-block {
+  margin: auto;
+}
+.cid-tbts6670h6 figcaption {
+  position: relative;
+}
+.cid-tbts6670h6 figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-tbts6670h6 .image-block {
+    width: 100% !important;
+  }
+}
+.cid-tbtuSP4hNx {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-tbtuSP4hNx .mbr-text,
+.cid-tbtuSP4hNx blockquote {
+  color: #767676;
+}
+.cid-tbtuSP4hNx .mbr-text P {
+  text-align: left;
+}
+.cid-tbtuSP4hNx .mbr-text {
+  color: #767676;
 }
 .cid-rQebAdBGIQ {
   padding-top: 30px;
