--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1432,6 +1432,21 @@ section.lazy-placeholder:after {
 .cid-tbtuSP4hNx .mbr-text {
   color: #767676;
 }
+.cid-tbtx6IJTWH {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-tbtx6IJTWH .mbr-text,
+.cid-tbtx6IJTWH blockquote {
+  color: #767676;
+}
+.cid-tbtx6IJTWH .mbr-text P {
+  text-align: left;
+}
+.cid-tbtx6IJTWH .mbr-text {
+  color: #767676;
+}
 .cid-rQebAdBGIQ {
   padding-top: 30px;
   padding-bottom: 0px;
