--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2649,33 +2649,33 @@ section.lazy-placeholder:after {
 .cid-tbsnxyLrFg .mbr-timeline-date {
   color: #767676;
 }
-.cid-txba0Euv4s {
-  padding-top: 30px;
+.cid-txbaIJxJ3q {
+  padding-top: 0px;
   padding-bottom: 30px;
   background-color: #ffffff;
 }
-.cid-txba0Euv4s .mbr-section-subtitle {
+.cid-txbaIJxJ3q .mbr-section-subtitle {
   color: #767676;
   text-align: center;
   font-weight: 300;
 }
-.cid-txba0Euv4s .timeline-text-content {
+.cid-txbaIJxJ3q .timeline-text-content {
   padding: 2rem 2.5rem;
   background: #efefef;
   margin-left: 2rem;
 }
-.cid-txba0Euv4s .timeline-text-content p {
+.cid-txbaIJxJ3q .timeline-text-content p {
   margin-bottom: 0;
 }
-.cid-txba0Euv4s .time-line-date-content {
+.cid-txbaIJxJ3q .time-line-date-content {
   margin-right: 2rem;
 }
-.cid-txba0Euv4s .time-line-date-content p {
+.cid-txbaIJxJ3q .time-line-date-content p {
   padding: 2rem 2.5rem;
   background: #efefef;
   float: right;
 }
-.cid-txba0Euv4s .timeline-element {
+.cid-txbaIJxJ3q .timeline-element {
   margin-bottom: 50px;
   position: relative;
   word-wrap: break-word;
@@ -2684,34 +2684,34 @@ section.lazy-placeholder:after {
   flex-direction: row;
   -webkit-flex-direction: row;
 }
-.cid-txba0Euv4s .timeline-element:hover .mbr-timeline-date {
+.cid-txbaIJxJ3q .timeline-element:hover .mbr-timeline-date {
   box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
   transition: all .4s;
 }
-.cid-txba0Euv4s .timeline-element:hover .timeline-text-content {
+.cid-txbaIJxJ3q .timeline-element:hover .timeline-text-content {
   box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
   transition: all .4s;
 }
-.cid-txba0Euv4s .mbr-timeline-date,
-.cid-txba0Euv4s .timeline-text-content {
+.cid-txbaIJxJ3q .mbr-timeline-date,
+.cid-txbaIJxJ3q .timeline-text-content {
   transition: all .4s;
 }
-.cid-txba0Euv4s .reverse {
+.cid-txbaIJxJ3q .reverse {
   flex-direction: row-reverse;
   -webkit-flex-direction: row-reverse;
 }
-.cid-txba0Euv4s .reverse .timeline-text-content {
+.cid-txbaIJxJ3q .reverse .timeline-text-content {
   margin-right: 2rem;
   margin-left: 0;
 }
-.cid-txba0Euv4s .reverse .time-line-date-content {
+.cid-txbaIJxJ3q .reverse .time-line-date-content {
   margin-left: 2rem;
   margin-right: 0rem;
 }
-.cid-txba0Euv4s .reverse .time-line-date-content p {
+.cid-txbaIJxJ3q .reverse .time-line-date-content p {
   float: left;
 }
-.cid-txba0Euv4s .iconBackground {
+.cid-txbaIJxJ3q .iconBackground {
   position: absolute;
   left: 50%;
   width: 20px;
@@ -2725,7 +2725,7 @@ section.lazy-placeholder:after {
   top: 20px;
   margin-left: -10px;
 }
-.cid-txba0Euv4s .separline:before {
+.cid-txbaIJxJ3q .separline:before {
   top: 20px;
   bottom: 0;
   position: absolute;
@@ -2736,171 +2736,44 @@ section.lazy-placeholder:after {
   height: calc(100% + 4rem);
 }
 @media (max-width: 768px) {
-  .cid-txba0Euv4s .iconBackground {
+  .cid-txbaIJxJ3q .iconBackground {
     left: 0 !important;
   }
-  .cid-txba0Euv4s .separline:before {
+  .cid-txbaIJxJ3q .separline:before {
     left: 0!important;
   }
-  .cid-txba0Euv4s .timeline-text-content {
+  .cid-txbaIJxJ3q .timeline-text-content {
     margin-left: 0 !important;
   }
-  .cid-txba0Euv4s .time-line-date-content {
+  .cid-txbaIJxJ3q .time-line-date-content {
     margin-right: 0 !important;
   }
-  .cid-txba0Euv4s .time-line-date-content p {
+  .cid-txbaIJxJ3q .time-line-date-content p {
     float: left !important;
   }
-  .cid-txba0Euv4s .reverse .time-line-date-content {
+  .cid-txbaIJxJ3q .reverse .time-line-date-content {
     margin-left: 0 !important;
   }
-  .cid-txba0Euv4s .reverse .timeline-text-content {
+  .cid-txbaIJxJ3q .reverse .timeline-text-content {
     margin-right: 0 !important;
   }
 }
-.cid-txba0Euv4s .reverseTimeline {
+.cid-txbaIJxJ3q .reverseTimeline {
   display: flex;
   flex-direction: column-reverse;
 }
-.cid-txba0Euv4s .mbr-timeline-text {
+.cid-txbaIJxJ3q .mbr-timeline-text {
   text-align: left;
   color: #767676;
 }
-.cid-txba0Euv4s .mbr-timeline-title {
+.cid-txbaIJxJ3q .mbr-timeline-title {
   text-align: left;
   color: #767676;
 }
-.cid-txba0Euv4s .mbr-section-title {
+.cid-txbaIJxJ3q .mbr-section-title {
   color: #767676;
 }
-.cid-txba0Euv4s .mbr-timeline-date {
-  color: #767676;
-}
-.cid-txb651zeaf {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-txb651zeaf .mbr-section-subtitle {
-  color: #767676;
-  text-align: center;
-  font-weight: 300;
-}
-.cid-txb651zeaf .timeline-text-content {
-  padding: 2rem 2.5rem;
-  background: #efefef;
-  margin-left: 2rem;
-}
-.cid-txb651zeaf .timeline-text-content p {
-  margin-bottom: 0;
-}
-.cid-txb651zeaf .time-line-date-content {
-  margin-right: 2rem;
-}
-.cid-txb651zeaf .time-line-date-content p {
-  padding: 2rem 2.5rem;
-  background: #efefef;
-  float: right;
-}
-.cid-txb651zeaf .timeline-element {
-  margin-bottom: 50px;
-  position: relative;
-  word-wrap: break-word;
-  word-break: break-word;
-  display: -webkit-flex;
-  flex-direction: row;
-  -webkit-flex-direction: row;
-}
-.cid-txb651zeaf .timeline-element:hover .mbr-timeline-date {
-  box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
-  transition: all .4s;
-}
-.cid-txb651zeaf .timeline-element:hover .timeline-text-content {
-  box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
-  transition: all .4s;
-}
-.cid-txb651zeaf .mbr-timeline-date,
-.cid-txb651zeaf .timeline-text-content {
-  transition: all .4s;
-}
-.cid-txb651zeaf .reverse {
-  flex-direction: row-reverse;
-  -webkit-flex-direction: row-reverse;
-}
-.cid-txb651zeaf .reverse .timeline-text-content {
-  margin-right: 2rem;
-  margin-left: 0;
-}
-.cid-txb651zeaf .reverse .time-line-date-content {
-  margin-left: 2rem;
-  margin-right: 0rem;
-}
-.cid-txb651zeaf .reverse .time-line-date-content p {
-  float: left;
-}
-.cid-txb651zeaf .iconBackground {
-  position: absolute;
-  left: 50%;
-  width: 20px;
-  height: 20px;
-  line-height: 30px;
-  text-align: center;
-  border-radius: 50%;
-  font-size: 30px;
-  display: inline-block;
-  background-color: #efefef;
-  top: 20px;
-  margin-left: -10px;
-}
-.cid-txb651zeaf .separline:before {
-  top: 20px;
-  bottom: 0;
-  position: absolute;
-  content: "";
-  width: 2px;
-  background-color: #efefef;
-  left: calc(50% - 1px);
-  height: calc(100% + 4rem);
-}
-@media (max-width: 768px) {
-  .cid-txb651zeaf .iconBackground {
-    left: 0 !important;
-  }
-  .cid-txb651zeaf .separline:before {
-    left: 0!important;
-  }
-  .cid-txb651zeaf .timeline-text-content {
-    margin-left: 0 !important;
-  }
-  .cid-txb651zeaf .time-line-date-content {
-    margin-right: 0 !important;
-  }
-  .cid-txb651zeaf .time-line-date-content p {
-    float: left !important;
-  }
-  .cid-txb651zeaf .reverse .time-line-date-content {
-    margin-left: 0 !important;
-  }
-  .cid-txb651zeaf .reverse .timeline-text-content {
-    margin-right: 0 !important;
-  }
-}
-.cid-txb651zeaf .reverseTimeline {
-  display: flex;
-  flex-direction: column-reverse;
-}
-.cid-txb651zeaf .mbr-timeline-text {
-  text-align: left;
-  color: #767676;
-}
-.cid-txb651zeaf .mbr-timeline-title {
-  text-align: left;
-  color: #767676;
-}
-.cid-txb651zeaf .mbr-section-title {
-  color: #767676;
-}
-.cid-txb651zeaf .mbr-timeline-date {
+.cid-txbaIJxJ3q .mbr-timeline-date {
   color: #767676;
 }
 .cid-rQdVR2sNag {
